Version 2.0: Major updates for 2026 season
## Core Features
- Per-type round numbering (KNOWN, UNKNOWN, FREESTYLE independent counters)
- FREESTYLE support with full scoring functionality
- Sequence validation with graceful fallbacks
- Score mismatch resolution tools for scorekeepers

## Admin Pages
- /admin/comp - Competition settings management
- /admin/device - Device/system management with update capability
- /admin/scores - Score management tools

## UI Improvements
- Admin confirmation modal before accessing admin pages
- Battery indicator improvements (warnings only)
- Improved pilot selection and judging page layouts
- Disabled buttons for unavailable sequence types

## Technical
- Configurable timeouts and settings API
- Multipart file upload support for sequences
- CI/CD workflows for releases
- Updated audio files including freestyle caller